--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,17 @@
-.nav a.active {
-  color: #09529e;
+.nav-item {
+  position: relative;
+}
+
+.nav-item a {
+  padding: 8px;
+  text-decoration: none;
+  color: black;
+}
+
+.nav-item a:hover:after {
   border-bottom: 3px solid #09529e;
+  width: 100%;
+  background: #1763b4;
 }
 
 .item-effect:hover, .nav-item a:hover {
@@ -23,34 +34,21 @@
   background: #1763b4;
 }
 
-
 .dropdown-menu {
   position: absolute;
-  top: 100%;
+  top: 100%;  /* Position it below the parent */
   left: 0;
   min-width: 200px;
   background-color: white;
   padding: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  z-index: 1000; 
+  z-index: 9999;
   display: flex;
   flex-direction: column;
   gap: 8px;
+  visibility: hidden; /* Initially hidden */
 }
 
-
-.nav-item {
-  position: relative;
-}
-
-.nav-item a {
-  padding: 8px;
-  text-decoration: none;
-  color: black;
-}
-
-.nav-item a:hover:after {
-  border-bottom: 3px solid #09529e;
-  width: 100%;
-  background: #1763b4;
+.nav-item:hover .dropdown-menu {
+  visibility: visible; /* Show dropdown on hover */
 }
